--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
        function matriz(lines){
         let matriz = []
         let cont = 0
-        for(let i=0; i<lines; i++){
+        for(let i=0; i<=lines; i++){
           matriz[i]=[];
-          for(let c=0; c<lines; c++){
+          for(let c=0; c<=lines; c++){
             matriz[i][c]= 0
           }
         }
-        for(let i= 0; i<lines;i++){
-          for(let cc =0 ; cc<lines; cc++){
+        for(let i= 0; i<=lines;i++){
+          for(let cc =0 ; cc<=lines; cc++){
             
             matriz[i][cc] = i*cc
             
@@ -25,7 +25,6 @@
         }
         return matriz
        }
-       console.table(matriz(15))
     </script>
   </body>
 </html>
