--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <body>
     <h1>Multiplication Table</h1>
+    <h2>function matriz()</h2>
     <script>
        function matriz(lines){
         let matriz = []
@@ -23,8 +24,9 @@
             
           }
         }
-        return matriz
+        console.table(matriz)
        }
+       
     </script>
   </body>
 </html>
