--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             
           }
         }
-        console.table(matriz)
+        return console.table(matriz)
        }
        
     </script>
