--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Multiplication Table</h1>
     <h2>function matriz()</h2>
+    <p>dkanmdjk</p>
     <script src="script.js"></script>
   </body>
 </html>
